# autoparquet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
autoschema/: __init__.py  constants.py  converters.py  io.py  schema.py  transforms.py
benchmarks/: bench.py
docs/: usage.md
src/autoparquet/: __init__.py  cli.py  constants.py  converters.py  io.py  schema.py  transforms.py
src/autoparquet/utils/: __init__.py  logger.py
tests/: test_cli.py  test_converters.py  test_csv_io.py  test_io.py  test_schema.py  test_transforms.py
