[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoparquet"
version = "0.1.2"
authors = [
  { name="Eric T. Dawson" },
]
description = "Automatically generate optimized Parquet/Arrow schemas for better compression."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyarrow>=14.0.1",
    "numpy>=1.24.0",
]

[project.scripts]
autoparquet = "autoparquet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["autoparquet*"]
exclude = ["tests*", "asc*"]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
polars = ["polars>=0.20.0"]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
]

[project.urls]
"Homepage" = "https://github.com/erictdawson/autoparquet"
"Bug Tracker" = "https://github.com/erictdawson/autoparquet/issues"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
